# Distill

./: .gitignore  README.md  benchmark.py  benchmark_report.txt  benchmark_results.jsonl  main.py  pyproject.toml
distill/: __init__.py  api.py  compression.py  core_compression.py  dataset.py  distill.py  inference.py  loading.py  pipeline.py  prompt_compressor.py  recovery.py  schemas.py  text_ops.py  token_ops.py  utils.py
distill/utils/: seed.py  token_classifier_dataset.py
models/: config.json  model.safetensors
